    - The list of blocks whose explosions should be reverted.
    - Is a default settings applied to new worlds only.
  - Removed Command: /tw toggle revertexpl
  - New Command: /tw toggle revertentityexpl
    - Toggles explosions caused by entities reverting on and off.
  - New Command: /tw toggle revertblockexpl
    - Toggles explosions caused by blocks reverting on and off..
  - API: Ally Events, courtesy of ceeedric with PR #4356. (First-Time Contributor!)
    - Adds the following cancellable events:
      - NationAcceptAllyRequestEvent
      - NationDenyAllyRequestEvent
      - NationRemoveAllyEvent
  - pt-br.yml updated to 0.86 by Plugner with PR #4348. (First-Time Contributor!)
  - New farmable nether blocks added to config by Momshroom with PR #4353. (First-Time Contributor!)
  - Fix bankruptcy test stopping players from using /t claim.
0.96.2.21:
  - New Config Option: new_world_settings.pvp.friendly_fire_enabled
    - Default: false.
    - Do new world have friendly fire enabled by default?
    - Does not affect Arena Plots which have FF enabled all the time.
    - When true players on the same town or nation will harm each other.
  - Removed Config Option: global_town_settings.friendly_fire
  - API: Added CombatUtil.preventFriendlyFire(attacker, defender, world).
  - API: Deprecated CombatUtil.preventFriendlyFire(attacker, defender).
  - Added friendlyFire setting to database as a world setting.
    - Closes #1242.
  - Made the plotManagementIgnoreIds also affect the wilderness explosion revert feature.
  - Added FURNACE,BLAST_FURNACE,SMOKER,BREWING_STAND,TNT,AIR,FIRE,NETHER_QUARTZ_ORE to the plotManagementIgnoreIds and default config's new_world_settings.plot_management.revert_on_unclaim.block_ignore.
  - Alter War to not use TownyMessaging.sendMessageToMode() methods, send prefixed messages instead.