@@ -5089,3 +5089,5 @@ v0.92.0.11:
   - Made the plotManagementIgnoreIds also affect the wilderness explosion revert feature.
   - Added FURNACE,BLAST_FURNACE,SMOKER,BREWING_STAND,TNT,AIR,FIRE,NETHER_QUARTZ_ORE to the plotManagementIgnoreIds and default config's new_world_settings.plot_management.revert_on_unclaim.block_ignore.
   - Alter War to not use TownyMessaging.sendMessageToMode() methods, send prefixed messages instead.
+  - Fix Citizens NPCs that use actual Resident names from throwing TownyExceptions when they enter/exit towns.
+    - Closes #4375.
